# HaskellCCEval

./: .gitignore  README.md  pyproject.toml
humaneval-hs/: HumanEval-0.hs  HumanEval-1.hs  HumanEval-10.hs  HumanEval-100.hs  HumanEval-101.hs  HumanEval-102.hs  HumanEval-103.hs  HumanEval-104.hs  HumanEval-105.hs  HumanEval-106.hs  HumanEval-107.hs  HumanEval-108.hs  HumanEval-109.hs  HumanEval-11.hs  HumanEval-110.hs  HumanEval-111.hs  HumanEval-112.hs  HumanEval-113.hs  HumanEval-114.hs  HumanEval-115.hs  HumanEval-116.hs  HumanEval-117.hs  HumanEval-118.hs  HumanEval-119.hs  HumanEval-12.hs  HumanEval-120.hs  HumanEval-121.hs  HumanEval-122.hs  HumanEval-123.hs  HumanEval-124.hs  HumanEval-125.hs  HumanEval-126.hs  HumanEval-127.hs  HumanEval-128.hs  HumanEval-129.hs  HumanEval-13.hs  HumanEval-130.hs  HumanEval-131.hs  HumanEval-132.hs  HumanEval-133.hs  (+127 more)
models/: create_model_inputs.py  evaluate_models.py  requirements.txt
models/evaluation/: .gitignore  evaluate.py  excelify.py  plotify.py  taxonomify.py
models/evaluation/data/: codegpt_base-test-humaneval.json
models/evaluation/output/: codegpt_base-test-humaneval.xlsx  codegpt_finetuned-test-humaneval.xlsx  unixcoder_base-test-humaneval.xlsx  unixcoder_finetuned-test-humaneval.xlsx
models/finetuning/codegpt/: blue-finetune.sh
models/finetuning/unixcoder/: blue-finetune.sh
models/inference/: .gitignore  CodeGPT.py  Seq2Seq.py  UniXcoder.py  codegpt_finetuned_predict.py  inference.py  unixcoder_finetuned_predict.py  unixcoder_predict.py
models/inference/base_models/: codegpt_finetuned_predict.py  (+4 more)
(+3 files in other folders)
