[tool.poetry]
name = "Haskell Code Completion"
version = "0.1.0"
description = "Attempt to improve LLM-based code completion for functional programming languages with a specific focus on Haskell."
authors = ["TU Delft ML4SE Group 7: Philippe de Bekker, Tim van Dam, Frank van der Heijden, Berend Nieuwschepen & Marc Otten"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
datasets = "^2.14.5"
torch = "^2.1.0"
fuzzywuzzy = "^0.18.0"
transformers = "^4.34.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.12.2"
mllint = "^0.12.2"
dslinter = "^2.0.9"
isort = "^5.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
